# Beamazed_models

./: .gitignore  README.MD  preprocess.py  pyproject.toml  task_1.py  task_2.py  task_3.py  test.py
utils/: utils.py
